--- a/pages/maintenance.html
+++ b/pages/maintenance.html
@@ -45,7 +45,7 @@
     <!-- Navigation Header -->
         <header id="main-header"
             class="bg-white shadow-card sticky top-0 z-50 transition-all duration-300">
-            <nav class="max-w-full ml-auto mr-0 pl-4 pr-0 sm:px-6 lg:px-8">
+            <nav class="max-w-full ml-auto mr-0 pl-4 pr-0 sm:px-6 lg:px-8 font-bold">
                 <div class="flex justify-between items-center h-16">
                     <!-- Logo -->
                     <div class="flex-shrink-0">
@@ -153,7 +153,7 @@
                             <a href="about_capabilities.html"
                                 class="nav-link text-secondary-600 hover:text-primary iran-sharp text-sm">درباره
                                 ما</a>
-                            <a href="technical_resources.html"
+                            <a href="maintenance.html"
                                 class="nav-link text-secondary-600 hover:text-primary iran-sharp text-sm">بلاگ</a>
                             <a href="contact_quote_request.html"
                                 class="btn-accent text-sm text-white">ارتباط با
