--- a/pages/service-sivacon.html
+++ b/pages/service-sivacon.html
@@ -139,7 +139,7 @@
 <body class="font-sans text-text-primary bg-background">
     <!-- Navigation Header -->
     <header id="main-header" class="bg-white shadow-card sticky top-0 z-50 transition-all duration-300">
-        <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 font-bold">
             <div class="flex justify-between items-center h-16">
                 <!-- Logo -->
                 <div class="flex-shrink-0">
