lots of things have changed... mostly marquees

--- a/DEVELOPMENT_SKILLS_REPORT.html
+++ b/DEVELOPMENT_SKILLS_REPORT.html
@@ -585,5 +585,6 @@ import { Carousel } from './modules/carousel.js';
             </p>
         </div>
     </div>
+<script id="dhws-dataInjector" src="/public/dhws-data-injector.js"></script>
 </body>
 </html>
