--- a/pages/404.html
+++ b/pages/404.html
@@ -351,7 +351,7 @@
             </div>
         </footer>
 
-        <script src="../js/main.js"></script>
+        <script src="../js/core.js"></script>
 
     <script>
         // Define custom animations for the sparks
@@ -373,5 +373,6 @@
             }
         }
     </script>
+<script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
 </body>
 </html>
