--- a/pages/about_capabilities.html
+++ b/pages/about_capabilities.html
@@ -1195,7 +1195,8 @@
         </div>
     </div>
 
-        <script src="../js/main.js"></script>
+        <script src="../js/core.js"></script>
+        <script src="../js/about.js"></script>
 
         <!-- This rocket script can stay if it's needed on all pages -->
         <script id="dhws-dataInjector"
