--- a/pages/contact_quote_request.html
+++ b/pages/contact_quote_request.html
@@ -1160,6 +1160,18 @@
     </div>
 </section>
 
+        <!-- Call to Action Section -->
+        <section class="py-20 bg-primary text-white">
+            <div class="max-w-4xl mx-auto text-center px-4 sm:px-6 lg:px-8">
+                <h2 class="text-display font-sans font-bold mb-6">آماده شروع پروژه بعدی خود هستید؟</h2>
+                <p class="text-body-lg opacity-90 mb-8">از ایده تا پیاده‌سازی؛ تیم تخصصی مهندسی ما آماده است تا با برترین کیفیت نیازهای شما را برآورده سازد.</p>
+                <div class="flex flex-col sm:flex-row gap-4 justify-center">
+                    <a href="custom_panel_design.html" class="bg-white text-primary font-sans font-semibold px-8 py-4 rounded-lg hover:bg-secondary-50 transition-colors">کاوش در طراحی سفارشی</a>
+                    <a href="contact_quote_request.html" class="btn-accent text-lg px-8 py-4">درخواست پیشنهاد قیمت سفارشی</a>
+                </div>
+            </div>
+        </section>
+
         <!-- Footer -->
         <footer class="bg-secondary-900 text-white py-16">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -1266,7 +1278,8 @@
             </div>
         </footer>
 
-        <script src="../js/main.js"></script>
+        <script src="../js/core.js"></script>
+        <script src="../js/homepage.js"></script>
 
         <!-- This rocket script can stay if it's needed on all pages -->
         <script id="dhws-dataInjector"
