--- a/pages/dd2.html
+++ b/pages/dd2.html
@@ -191,5 +191,6 @@
 })();
 </script>
 <!-- ...existing code... -->
+<script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
 </body>
 </html>
