--- a/pages/gachsaran.html
+++ b/pages/gachsaran.html
@@ -479,7 +479,7 @@
             </div>
         </footer>
 
-        <script src="../js/main.js"></script>
+        <script src="../js/core.js"></script>
     <script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
 </body>
 </html>
