--- a/pages/products.html
+++ b/pages/products.html
@@ -925,7 +925,7 @@
                     </div>
                 </footer>
 
-                <script src="../js/main.js"></script>
+                <script src="../js/core.js"></script>
                 <script id="dhws-dataInjector"
                     src="../public/dhws-data-injector.js"></script>
             </body>
