--- a/pages/project_portfolio.html
+++ b/pages/project_portfolio.html
@@ -1116,7 +1116,8 @@
                         </div>
                     </footer>
 
-                    <script src="../js/main.js"></script>
+                   <script src="../js/core.js"></script>
+                   <script src="../js/projects.js"></script>
 
                     <!-- This rocket script can stay if it's needed on all pages -->
                     <script id="dhws-dataInjector"
