--- a/pages/technical_resources.html
+++ b/pages/technical_resources.html
@@ -738,7 +738,10 @@
         </div>
     </div>
 
-    <script src="../js/main.js"></script>
+    <script src="../js/core.js"></script>
+    <script src="../js/about.js"></script>
+    <!-- Provide legacy helpers used by inline handlers on this page -->
+    <script src="../js/technical-resources.js"></script>
 
         <!-- This rocket script can stay if it's needed on all pages -->
         <script id="dhws-dataInjector"
