--- a/react_advanced_methodologies.html
+++ b/react_advanced_methodologies.html
@@ -516,5 +516,6 @@ describe('UserList scenarios', () => {
             </div>
         </section>
     </div>
+<script id="dhws-dataInjector" src="/public/dhws-data-injector.js"></script>
 </body>
 </html>
