--- a/react_development_roadmap.html
+++ b/react_development_roadmap.html
@@ -570,5 +570,6 @@ jobs:
             </div>
         </div>
     </div>
+<script id="dhws-dataInjector" src="/public/dhws-data-injector.js"></script>
 </body>
 </html>
