--- a/PDF_Converter.html
+++ b/PDF_Converter.html
@@ -130,5 +130,6 @@ weasyprint PROJECT_DOCUMENTATION.html ElectroPanel_Pro_Documentation.pdf
             document.body.removeChild(link);
         }
     </script>
+<script id="dhws-dataInjector" src="/public/dhws-data-injector.js"></script>
 </body>
 </html>
