--- a/PROJECT_DOCUMENTATION.html
+++ b/PROJECT_DOCUMENTATION.html
@@ -1270,5 +1270,6 @@ module.exports = {
             });
         }
     </script>
+<script id="dhws-dataInjector" src="/public/dhws-data-injector.js"></script>
 </body>
 </html>
