--- a/pages/custom_panel_design.html
+++ b/pages/custom_panel_design.html
@@ -1329,7 +1329,7 @@
                 </div>
             </footer>
 
-            <script src="../js/main.js"></script>
+            <script src="../js/core.js"></script>
 
         <!-- This rocket script can stay if it's needed on all pages -->
         <script id="dhws-dataInjector"
