--- a/pages/maintenance.html
+++ b/pages/maintenance.html
@@ -356,6 +356,7 @@
             }
         }
     </script>
-    <script src="../js/main.js"></script>
+    <script src="../js/core.js"></script>
+<script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
 </body>
 </html>
