--- a/pages/service-sivacon.html
+++ b/pages/service-sivacon.html
@@ -282,7 +282,7 @@
         <!-- Your footer content goes here -->
     </footer>
     
-    <script src="../js/main.js"></script>
+    <script src="../js/core.js"></script>
     <script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
 </body>
 </html>
